--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,4 @@
-baseURL: http://example.org/
-languageCode: en-us
-title: My New Hugo Site
+baseURL: "http://amberhsu.github.io/"
+languageCode: "zh-tw"
+title: "Hello World!"
+theme: "timer-hugo"
