--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://amberhsu.github.io/"
+baseURL = "https://amberhsu9557.github.io/"
 languageCode = "zh-tw"
 title = "Timer | Responsive Multipurpose Bootstrap Hugo Template"
 theme = "timer-hugo"
